app-nginx/03-webnginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  name: nginx
  namespace: webnginx
spec:
  selector:
    app: nginx
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  type: ClusterIP
